Finalize assessment.