@@ -1,30 +1,28 @@
 package org.muzir.interview.klarna;
 
 import org.junit.Test;
-
-import java.util.List;
-
+import java.util.Arrays;
 import static org.junit.Assert.assertEquals;
 
 
 public class TransactionsTest {
 	@Test
 	public void ifTransactionListIsEmpty_thenReturnEmptyList() {
-		assertEquals(List.of(), Transactions.findRejectedTransactions(List.of(), 0));
+		assertEquals(Arrays.asList(), Transactions.findRejectedTransactions(Arrays.asList(), 0));
 	}
 
 	@Test
 	public void ifTransactionAmountEqualToCredit_thenReturnEmptyList() {
-		assertEquals(List.of(), Transactions.findRejectedTransactions(List.of("John,Doe,john@doe.com,200,TR0001"), 200));
+		assertEquals(Arrays.asList(), Transactions.findRejectedTransactions(Arrays.asList("John,Doe,john@doe.com,200,TR0001"), 200));
 	}
 
 	@Test
 	public void ifOneTransactionAndTransactionAmountGreaterThanCredit_thenReturnOneRejectedTransaction() {
-		assertEquals(List.of("TR0001"), Transactions.findRejectedTransactions(List.of("Jane,Doe,jane@doe.com,201,TR0001"), 200));
+		assertEquals(Arrays.asList("TR0001"), Transactions.findRejectedTransactions(Arrays.asList("Jane,Doe,jane@doe.com,201,TR0001"), 200));
 	}
 
 	@Test
 	public void ifTransactionSumAmountGreaterThanCreditAfterSecondTransaction_thenRejectedSecondTransaction() {
-		assertEquals(List.of("TR0002"), Transactions.findRejectedTransactions(List.of("Jane,Doe,jane@doe.com,199,TR0001", "Jane,Doe,jane@doe.com,2,TR0002"), 200));
+		assertEquals(Arrays.asList("TR0002"), Transactions.findRejectedTransactions(Arrays.asList("Jane,Doe,jane@doe.com,199,TR0001", "Jane,Doe,jane@doe.com,2,TR0002"), 200));
 	}
 }
